# SPAM_DETECTOR_API

./: README.md  SMSSpamCollection.csv  dockerfile  preprocessing.py  pyproject.toml  requirements.txt  spam_classifier_model.pkl  tfidf_vectorizer.pkl  training.py
data/: SMSSpamCollection.csv
models/: logistic_model.pkl  model.pkl  preprocess_pipeline.pkl  vectorizer.pkl
noteboks/: analyse.ipynb  tutorial.ipynb
notebooks/: tutorial.ipynb
src/: app.py  spam_model.py
