[tool.poetry]
name = "spam-detector-api"
version = "0.1.0"
description = ""
authors = ["Boudoul <abdoulayediallo338@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
nltk = "^3.9.1"
urlextract = "^1.9.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
